--- a/package.json
+++ b/package.json
@@ -8,19 +8,30 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "browserify-zlib": "^0.2.0",
     "contracts": "file:../build/contracts",
     "crypto-browserify": "^3.12.0",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^6.3.0",
+    "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
+    "imghash": "^0.0.9",
+    "leven": "^4.0.0",
+    "looks-same": "^8.1.0",
     "metamask-react": "^2.6.0",
     "nft.storage": "^7.0.3",
     "os-browserify": "^0.3.0",
+    "pixelmatch": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-py": "^1.8.5",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "resemblejs": "^4.1.0",
+    "sharp": "^0.32.1",
+    "sharp-phash": "^2.1.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0",
